buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
        classpath 'com.kncept.junit5.reporter:junit-reporter:1.0.0'
    }
}

plugins {
    id 'com.github.ben-manes.versions' version '0.15.0' //dependencyUpdates
    id 'com.gradle.build-scan' version '1.9.1'
}

buildScan {
    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
    licenseAgree = 'yes'
}

allprojects {
    apply plugin: 'maven'
    apply plugin: 'idea'
    group = 'narchy'
    version = '1.0'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'com.github.johnrengelman.shadow'
    apply plugin: 'com.kncept.junit5.reporter'

    sourceCompatibility = 1.9
    targetCompatibility = 1.9
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        //options.incremental = true // one flag, and things will get MUCH faster
    }

    test {
        reports {
            junitXml.enabled = false
            html.enabled = true
        }
    }

    repositories {
        mavenLocal()

        maven { url "http://repo.maven.apache.org/maven2" }
        maven { url "https://jcenter.bintray.com" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
    }

    junitHtmlReport {
        //https://github.com/kncept/junit-reporter
        // If true, then instead of producing multiple reports per test folder (test run),
        // aggregate them all together into the test-reports root directory.
        //
        // Also use this if all your test results end up directly in the test-results directory
        aggregated = true

        //RAG status css overrides
        cssRed = 'red'
        cssAmber = 'orange'
        cssGreen = 'green'
    }
}
